<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/gotouserslistbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gotouserslistbutton"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/gotoaboutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gotoaboutbutton"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/gotohelpbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gotohelpbutton"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>